force-app/main/default/objects/Invoice__c/fields/Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>Amount_Credited__c</fullName>
    <label>Amount Credited</label>
    <summarizedField>Payment__c.Credit_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Credit Note</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Credit_Applied__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>