force-app/main/default/objects/Invoice__c/fields/Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Amount_Outstanding__c</fullName>
    <formula>IF( Void_Invoice__c = TRUE, 0, MAX(0,Invoice_Total__c - (Amount_Paid__c+Amount_Credited__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>