force-app/main/default/objects/Invoice__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>