force-app/main/default/objects/Invoice__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinic</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>