force-app/main/default/objects/Invoice__c/fields/Credit_Available__c.field-meta.xml
<CustomField>
    <fullName>Credit_Available__c</fullName>
    <label>Credit Available</label>
    <summaryFilterItems>
        <field>Payment__c.Credit_Applied__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Credit_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>