force-app/main/default/objects/Invoice__c/fields/Patient_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor__c</fullName>
    <label>Patient &amp; Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>