force-app/main/default/objects/Invoice__c/fields/Tax_Amount_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_on_Invoice__c</fullName>
    <label>Tax Amount on Invoice</label>
    <summarizedField>Invoice_Line_Item__c.Tax_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>