force-app/main/default/objects/Invoice__c/fields/Total_Available_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Credits__c</fullName>
    <label>Total Available Credits</label>
    <summarizedField>Payment__c.Credit_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Credit_Applied__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>