force-app/main/default/objects/Invoice__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <formula>IF( Void_Invoice__c, &quot;Voided&quot;, &quot;Valid&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validity</label>
    <type>Text</type>
</CustomField>