force-app/main/default/objects/Invoice__c/fields/Void_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Void_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers $0 Balance in amount standing and Void display banner flow</description>
    <label>Void Invoice</label>
    <type>Checkbox</type>
</CustomField>