force-app/main/default/objects/Invoice__c/listViews/All_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Invoices</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Patient_Donor__c</columns>
    <columns>Invoice_Total__c</columns>
    <columns>Amount_Outstanding__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Cycle__c</columns>
    <columns>Credit_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Patient_Donor__c</field>
        <operation>notEqual</operation>
        <value>Jenna Smith</value>
    </filters>
    <label>All Invoices</label>
    <sharedTo>
        <group>Life_Fertility_Admin</group>
    </sharedTo>
</ListView>