force-app/main/default/objects/Invoice__c/listViews/All_Outstanding_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Outstanding_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Patient_Donor__c</columns>
    <columns>Invoice_Total__c</columns>
    <columns>Amount_Outstanding__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Cycle__c</columns>
    <columns>Credit_Available__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Outstanding Invoices</label>
    <sharedTo>
        <group>Life_Fertility_Admin</group>
    </sharedTo>
</ListView>