force-app/main/default/objects/Invoice__c/listViews/Paid_Awaiting_Claiming.listView-meta.xml
<ListView>
    <fullName>Paid_Awaiting_Claiming</fullName>
    <columns>NAME</columns>
    <columns>Amount_Paid__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_Total__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Notes__c</columns>
    <columns>Patient_Donor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount_Outstanding__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Paid in Full</label>
</ListView>